<resources>
    <string name="app_name">SaifuSolution</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="transactions">Transactions</string>
    <string name="account_balance">Account balance</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="services">Services</string>
    <string name="statement">Statement</string>
    <string name="profile">Profile</string>
    <string name="tools">Tools</string>
    <string name="topup">Topup</string>
    <string name="marketplace">Marketplace</string>
    <string name="investment">Investment</string>
    <string name="management">Management</string>
</resources>
