<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTopup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:text="@string/topup"
                    android:textSize="12sp" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tvAccBal"
                    android:layout_centerHorizontal="true"
                    android:text="@string/account_balance" />

                <TextView
                    android:id="@+id/tvAccBal"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="$1000" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:columnCount="4"
            android:rowCount="2">

            <RelativeLayout
                android:id="@+id/rlServices"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/ivServices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_extension_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivServices"
                    android:layout_centerHorizontal="true"
                    android:text="@string/services"
                    app:cornerRadius="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlStatement"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/ivStatement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_description_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivStatement"
                    android:layout_centerHorizontal="true"
                    android:text="@string/statement"
                    app:cornerRadius="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlProfile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_account_circle_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivProfile"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profile"
                    app:cornerRadius="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlTools"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/ivTools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_build_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivTools"
                    android:layout_centerHorizontal="true"
                    android:text="@string/tools"
                    app:cornerRadius="10dp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlBankManagement"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/ivBankManagement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_domain_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivBankManagement"
                    android:layout_centerHorizontal="true"
                    android:text="@string/management"
                    app:cornerRadius="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlInvestment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/ivInvestment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_bar_chart_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivInvestment"
                    android:layout_centerHorizontal="true"
                    android:text="@string/investment"
                    app:cornerRadius="10dp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlMarketplace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/ivMarketplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_storefront_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivMarketplace"
                    android:layout_centerHorizontal="true"
                    android:text="@string/marketplace"
                    app:cornerRadius="10dp" />
            </RelativeLayout>
        </GridLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="15dp"
                    android:text="Show all"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvUpcomingTitle"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="Upcoming payments" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tvUpcomingTitle"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvUpcomingDate"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="30th May" />

                        <TextView
                            android:id="@+id/tvUpcomingMerchant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@id/tvUpcomingAmt"
                            android:layout_toEndOf="@id/tvUpcomingDate"
                            android:text="Prudential Insurance" />

                        <TextView
                            android:id="@+id/tvUpcomingAmt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="$300" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvUpcomingDate1"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="30th May" />

                        <TextView
                            android:id="@+id/tvUpcomingMerchant1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@id/tvUpcomingAmt1"
                            android:layout_toEndOf="@id/tvUpcomingDate1"
                            android:text="M1 Broadband" />

                        <TextView
                            android:id="@+id/tvUpcomingAmt1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="$50" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/divider" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="Subtotal" />

                        <TextView
                            android:id="@+id/tvTotal"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="$350" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/transactions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>